--- a/index.html
+++ b/index.html
@@ -28,23 +28,38 @@
                 <div class="icon">
                 <div class="icon-top">
                     <div class="search">
-                        <i class="fas fa-search"></i>
+                        <a href="#">
+                            <i class="fas fa-search"></i>
+                            <span>Cerca</span>
+                        </a>
                     </div>
                     <div class="home">
-                        <i class="fas fa-home"></i>
+                        <a href="#">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
                     </div>
                     <div class="music">
-                        <i class="fas fa-music"></i>
+                        <a href="#">
+                            <i class="fas fa-music"></i>
+                            <span>La tua musica</span>
+                        </a>
                     </div>
                 </div>
                 <div class="icon-down">
                     <div class="arrow">
-                        <i class="fas fa-arrow-circle-down"></i>
+                        <a href="#">
+                            <i class="fas fa-arrow-circle-down"></i>
+                            <span>Install App</span>
+                        </a>
                     </div>
 
 
                     <div class="user">
-                        <i class="fas fa-user"></i>
+                        <a href="#">
+                            <i class="fas fa-user"></i>
+                            <span>Maurizio F.</span>
+                        </a>
                     </div>
                 </div>
                 </div>
