colorata barra musica con linear gradient

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     </span>
                 </div>
                 <div class="footer-center-bottom">
-                
-                    <div class="bar">
 
+                    <div class="bar">
+                        <span></span>
                     </div>
                 </div>
             </div>
