completato footer tablet

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
                 <div class="footer-center-top">
 
                     <span>
+                        <i class="fas fa-random"></i>
+                    </span>
+
+                    <span>
                         <i class="fas fa-caret-left fa-2x"></i>
                     </span>
                     <span>
@@ -146,6 +150,9 @@
                     </span>
                     <span>
                         <i class="fas fa-caret-right fa-2x"></i>
+                    </span>
+                    <span>
+                        <i class="fas fa-undo"></i>
                     </span>
                 </div>
                 <div class="footer-center-bottom">
