--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </span>
 
                     <span>
-                        <i class="fas fa-caret-left fa-2x"></i>
+                        <i class="fas fa-step-backward"></i>
                     </span>
                     <span>
                         <i class="far fa-pause-circle fa-2x"></i>
@@ -162,7 +162,20 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-right"></div>
+            <div class="footer-right">
+                <span>
+                    <i class="fas fa-list-ul"></i>
+                </span>
+                <span>
+                    <i class="fas fa-desktop"></i>
+                </span>
+                <span>
+                    <i class="fas fa-volume-up"></i>
+                </span>
+                <span class="bar-audio">
+                        <span></span>
+                </span>
+            </div>
 
         </footer>
     </body>
