Aggiunto testo sotto img

--- a/index.html
+++ b/index.html
@@ -91,27 +91,40 @@
                     <div class="box-img">
                         <div class="artist-img">
                             <img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRdK6Qv9GHZB6_cNEq5372b0D2EpWAV8kvovA&usqp=CAU" alt="">
+                            <p>Bob Marley</p>
                         </div>
                         <div class="artist-img">
                             <img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRPZsDxvVf4K0_paDxtx1teEE_j2P5FhyBpFQ&usqp=CAU" alt="">
+                            <p>Bob Dylan</p>
+
                         </div>
                         <div class="artist-img">
                             <img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQsn5LijPJhNyTVviD_IWS0lwuCHoMcJmWRkw&usqp=CAU" alt="">
+                            <p>Jimmy Hendrix</p>
                         </div>
                         <div class="artist-img">
                             <img class="img-square" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTJLkw3M4-KI4pVRNDv98HdWHX_oS5Fe40iTw&usqp=CAU" alt="">
+                            <p>Mio fratello è <br> figlio unico <br>
+                             -Rino Gaetano-
+                             </p>
                         </div>
                         <div class="artist-img">
                             <img class="img-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSn-HGr8Uf0MK-USNlHrAYvvcHTWAbcucoB5w&usqp=CAU" alt="">
+                            <p>Caparezza</p>
                         </div>
                         <div class="artist-img">
                             <img class="img-square" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRY1TnFKKYM4uF5Z_AgQDRiYo4vXnQhZoG62g&usqp=CAU" alt="">
+                            <p>Relaxing Playlist</p>
                         </div>
                         <div class="artist-img">
                             <img class="img-square" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQebaKPqOpVUqqD9lRzLrgDjr6CUingAw_dLA&usqp=CAU" alt="">
+                            <p>Happy Day 2</p>
                         </div>
                         <div class="artist-img">
                             <img class="img-square" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSNexDnbyyrvT1aeHTruVoLEH9jo-Joo8Hf3w&usqp=CAU" alt="">
+                            <p>Live After Death <br>
+                                -Iron Maiden-
+                             </p>
                         </div>
                     </div>
 
@@ -129,7 +142,7 @@
                         <i class="fas fa-random"></i>
                     </span>
                     <span class="mini-heart">
-                        <i class="far fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                     </span>
 
                 </div>
@@ -146,7 +159,7 @@
                         <i class="fas fa-step-backward"></i>
                     </span>
                     <span>
-                        <i class="far fa-pause-circle fa-2x"></i>
+                        <i class="fas fa-pause-circle fa-2x"></i>
                     </span>
                     <span>
                         <i class="fas fa-caret-right fa-2x"></i>
